# ShuZhiRen

./: .gitignore  PROJECT_SUMMARY.md  README.md  app.py  cookie.md  env.example  gemini_output.txt  pyproject.toml  pytest_gemini.txt  qwen.py  requirements.txt  rules.md  run_app.command  run_gemini_test.py  web_app.py  wenti.md  yt_downloader.py  优化1.md  共享账号多人使用方案.md  指纹浏览器基础知识.md  爬虫基础知识.md  爬虫进阶知识.md  爬虫高阶知识.md
.cursor/rules/: python-uv.mdc
highlight_clipper/: __init__.py  env.example  gemini_analyzer.py  main.py  pipeline.py  run.bat  video_utils.py
tests/: test_core.py  test_gemini_analyzer.py  test_smoke.py  test_youtube_download.py
